# POMDPPlanners

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ACADEMIC_PAPER_READY.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_INTERFACE_GRAPH_EXPLANATION.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.base  LICENSE.md  MANIFEST.in  Makefile  README.md  USER_GUIDE.md  academic_package_description.md  academic_paper_paragraphs_summary.md  architecture_diagram.py  bench_after.txt  bench_arena_vs_anytree.py  bench_before.txt  bench_cld_action_hashing.py  bench_drop_asarray.py  bench_drop_asarray_after.txt  bench_drop_asarray_before.txt  bench_env_sample_direct_api.md  bench_envs_kernel_extension.py  bench_icvar_envs.py  bench_pacman_ndarray_state.py  bench_pacman_ndarray_state_baseline.md  bench_pft_dpw_native_rollout.py  bench_planner_sims_per_sec.py  bench_safety_ant_native.md  benchmark_planners.py  build_docs.sh  core_interface_graph.py  coverage.xml  docker-compose.cicd.yml  (+24 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  feature_request.md  type_hint.md
.github/workflows/: build-base-image.yml  docker-build.yml  docs.yml  docs.yml.disabled  release.yml  tests.yml  update-prs.yml  weekly-slow-tests.yml
POMDPPlanners/: __init__.py  pytest.ini  requirements.txt
POMDPPlanners/configs/: __init__.py  environment_configs.py  experiment_configs.py  planners_hyperparam_configs.py
POMDPPlanners/core/: __init__.py  _native.pyi  belief.py  config_types.py  cost.py  distributions.py  environment.py  policy.py  serialization.py  simulation.py  tree.py
POMDPPlanners/environments/: __init__.py  cartpole_pomdp.py  cartpole_pomdp_beliefs.py  cartpole_pomdp_gaussian_beliefs.py  crying_babies_pomdp.py  discrete_light_dark_pomdp.py  laser_tag_pomdp.py  mountain_car_pomdp.py  mountain_car_pomdp_beliefs.py  push_pomdp.py  rock_sample_pomdp.py  safety_ant_velocity_pomdp.py  sanity_pomdp.py  tiger_pomdp.py
POMDPPlanners/planners/: __init__.py  sparse_sampling_planner.py
POMDPPlanners/simulations/: __init__.py  episodes.py  experiment_runner.py  hyper_parameter_tuning_simulations.py  hyperparameter_tuning_evaluation_workflows.py  planner_evaluation_workflow.py  simulation_statistics.py  simulations.py  simulations_api.py  simulations_deployment.py  simulator.py
POMDPPlanners/tests/: __init__.py  conftest.py  test_all_usage_examples.py  test_metric_consistency.py  test_metric_consistency_utils.py  test_setup.py  test_simulation.py
POMDPPlanners/training/: __init__.py  callbacks.py  policy_trainer.py
POMDPPlanners/utils/: action_samplers.py  belief_factory.py  config_loader.py  config_to_id.py  distributed_computing.py  hyperparameter_tuning_and_eval.py  logger.py  memory_tracker.py  multivariate_normal.py  numba_kernels.py  planner_episode_visualization.py  simulations_caching.py  statistics.py  statistics_utils.py  tree_statistics.py  visualization.py  weighted_particle_beliefs.py
docker/: Dockerfile  Dockerfile.base  Dockerfile.ci  docker-compose.cicd.yml  docker-compose.test.yml
docs/: conf.py  core.md  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: POMDPPlanners.configs.environment_configs.rst  POMDPPlanners.configs.planners_hyperparam_configs.rst  POMDPPlanners.configs.rst  POMDPPlanners.core.belief.rst  POMDPPlanners.core.config_types.rst  POMDPPlanners.core.cost.rst  POMDPPlanners.core.distributions.rst  POMDPPlanners.core.environment.rst  POMDPPlanners.core.policy.rst  POMDPPlanners.core.rst  POMDPPlanners.core.simulation.history.rst  POMDPPlanners.core.simulation.hyperparameter_tuning.rst  POMDPPlanners.core.simulation.metrics.rst  POMDPPlanners.core.simulation.rst  POMDPPlanners.core.simulation.simulation_configs.rst  POMDPPlanners.core.simulation.tasks.rst  POMDPPlanners.core.tree.rst  POMDPPlanners.environments.cartpole_pomdp.rst  POMDPPlanners.environments.laser_tag_pomdp.rst  POMDPPlanners.environments.light_dark_pomdp.continuous_light_dark_pomdp.rst  POMDPPlanners.environments.light_dark_pomdp.discrete_light_dark_pomdp.rst  POMDPPlanners.environments.light_dark_pomdp.light_dark_pomdp_utils.base_light_dark_pomdp.rst  POMDPPlanners.environments.light_dark_pomdp.light_dark_pomdp_utils.light_dark_observation_models.rst  POMDPPlanners.environments.light_dark_pomdp.light_dark_pomdp_utils.light_dark_reward_models.rst  POMDPPlanners.environments.light_dark_pomdp.light_dark_pomdp_utils.rst  POMDPPlanners.environments.light_dark_pomdp.rst  POMDPPlanners.environments.mountain_car_pomdp.rst  POMDPPlanners.environments.pacman_pomdp.pacman_pomdp.rst  POMDPPlanners.environments.pacman_pomdp.rst  POMDPPlanners.environments.push_pomdp.rst  POMDPPlanners.environments.rock_sample_pomdp.rst  POMDPPlanners.environments.rst  POMDPPlanners.environments.safety_ant_velocity_pomdp.rst  POMDPPlanners.environments.sanity_pomdp.rst  POMDPPlanners.environments.tiger_pomdp.rst  POMDPPlanners.planners.mcts_planners.path_simulations_policy.rst  POMDPPlanners.planners.mcts_planners.pft_dpw.rst  POMDPPlanners.planners.mcts_planners.pomcp.rst  POMDPPlanners.planners.mcts_planners.pomcp_dpw.rst  POMDPPlanners.planners.mcts_planners.pomcpow.rst  (+125 more)
docs/core/: beliefs.rst  environment.md  environments.rst  planners.rst  simulations.rst
docs/examples/: advanced_optimization.ipynb  basic_usage.ipynb  basic_usage.rst  belief_representations.ipynb  custom_environment.ipynb  hyperparameter_tuning.ipynb  hyperparameter_tuning.rst  planners_comparison.ipynb  planners_comparison.rst  tree_analysis_debugging.ipynb
experiments/: benchmark_runner.py  visualize_path_example.py
experiments/configs/: cartpole_config.py  continuous_light_dark_config.py  discrete_light_dark_config.py  environments_configs.py  mountain_car_config.py  pomcp_dpw_vs_pomcpow_continuous_light_dark_config.py  push_config.py  safety_ant_velocity_config.py  (+1 more)
scripts/: build_docs.sh  tune_and_evaluate_pomcp_tiger.py  tune_and_evaluate_pomcp_tiger_optuna.py
test_documentation_summaries/: README.md  test_all_usage_examples_summary.md  test_setup_summary.md
(+876 files in other folders)
